wp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: wordpress
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: wordpress
  template: 
    metadata: 
      labels: 
        app: wordpress
    spec: 
      containers: 
        - 
          image: "wordpress:5.3.0"
          name: wordpress
          ports: 
            - 
              containerPort: 80
          resources: 
            limits: 
              cpu: "2"
              memory: 2Gi
            requests: 
              cpu: 150m
              memory: 200Mi
          volumeMounts: 
            - 
              mountPath: /var/www/html/wp-content
              name: wordpress
      volumes:
      - name: wordpress
        persistentVolumeClaim:
          claimName: wordpress-pvc
