svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: wordpress-svc
  namespace: default
spec: 
  ports: 
    - 
      port: 80
      targetPort: 80
  selector: 
    app: wordpress
  type: ClusterIP
