full-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: wordpress
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: wordpress
  template: 
    metadata: 
      labels: 
        app: wordpress
    spec: 
      containers: 
        - 
          image: "wordpress:5.3.0"
          name: wordpress
          ports: 
            - 
              containerPort: 80
          resources: 
            limits: 
              cpu: "2"
              memory: 2Gi
            requests: 
              cpu: 150m
              memory: 200Mi
          volumeMounts: 
            - 
              mountPath: /var/www/html/wp-content
              name: wordpress
      volumes:
      - name: wordpress
        persistentVolumeClaim:
          claimName: wordpress-pvc    
---
apiVersion: v1
kind: Service
metadata: 
  name: wordpress-svc
  namespace: default
spec: 
  ports: 
    - 
      port: 80
      targetPort: 80
  selector: 
    app: wordpress
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: wordpress
  namespace: default
spec: 
  rules: 
    - 
      host: yourdomain.com
      http: 
        paths: 
          - 
            backend: 
              service: 
                name: wordpress-svc
                port: 
                  number: 80
            path: /
            pathType: Prefix
