ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: wordpress
  namespace: default
spec: 
  rules: 
    - 
      host: yourdomain.com
      http: 
        paths: 
          - 
            backend: 
              service: 
                name: wordpress-svc
                port: 
                  number: 80
            path: /
            pathType: Prefix
